# jie

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: code-quality.yml  pr-check.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: block.rs  game.rs  mod.rs  restore.rs
src-tauri/src/services/: file_ops.rs  icon.rs  mod.rs  shortcut.rs  storage.rs  timer.rs
src/assets/styles/: main.css
src/components/: BlockDialog.tsx  GameCard.tsx
src/components/confirm/: ConfirmChain.tsx
src/hooks/: useDragDrop.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/stores/: useGameStore.ts  useThemeStore.ts
src/types/: index.ts
