[package]
name = "jie"
version = "0.1.0"
description = "戒 - 帮助用户戒除游戏瘾的桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "jie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
winapi = { version = "0.3", features = ["winnt", "fileapi", "shellapi", "winuser", "winbase", "combaseapi", "shobjidl_core", "objbase", "shlobj", "wtypesbase", "wingdi", "winreg", "winerror"] }
